<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="0dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:orientation="vertical"
    tools:context=".Activity.AddDetailsActivity"
    android:gravity="center"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/scrollbar"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="60dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="CardiacRecord"
                android:textColor="@color/black"

                android:textSize="40sp">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DateLayout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="34dp"

                android:hint="Date:">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Date"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >




                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TimeLayout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                android:hint="Time:">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Time"

                    android:inputType="time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/HeartrateLayout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                android:hint="Heart Rate:">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Heartrate"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SystolicLayout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                android:hint="Systolic:">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Systolic"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DiastolicLayout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"

                android:hint="Diastolic:">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Diastolic"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               >
               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/CommentLayout"

                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"

                   android:layout_marginTop="10dp"

                   android:hint="Comment:">

                   <!--this is the actual edit text which takes the input-->
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/Comment"
                       android:layout_width="match_parent"
                       android:layout_height="120sp" />

               </com.google.android.material.textfield.TextInputLayout>

               <ProgressBar
                   android:layout_marginStart="160dp"
                   android:layout_marginVertical="30dp"
                   android:id="@+id/progressbar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:indeterminateTint="#50555C"
                   android:layout_marginTop="5dp"
                   android:maxHeight="40dp"
                   android:minHeight="40dp" />

           </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addRecordButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp"
                android:text="Save"
                android:textSize="16sp"

                android:textStyle="bold"

                />


        </LinearLayout>


    </ScrollView>
</LinearLayout>