<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailsActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        >


           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1">
               <TextView

                   android:id="@+id/dateForDetails"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="03.07.2022"
                   android:textStyle="bold"
                   android:textColor="@color/black"
                   android:textSize="40dp"
                   android:layout_marginLeft="10dp"
                   >

               </TextView>
           </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="15dp"
                android:paddingRight="18dp"

                >



                <TextView
                    android:id="@+id/timeDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11.10pm"
                    android:textColor="@color/black"
                    android:textSize="20dp"

                    >

                </TextView>

            </LinearLayout>



    </LinearLayout>




    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"

        android:layout_marginVertical="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Heart Rate"
                    android:textColor="#50555C"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"

                    >

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                >
                <EditText

                    android:id="@+id/heartRateForDetails"
                    android:layout_width="50dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:background="@null"

                    >

                </EditText>
            </LinearLayout>
        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>




    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        app:cardCornerRadius="5dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"

        android:layout_marginVertical="10dp"

        >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:weightSum="2"
           android:layout_marginTop="10dp">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Systolic"
                   android:textColor="#50555C"
                   android:textSize="20dp"
                   android:layout_marginLeft="10dp"
                   >

               </TextView>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:gravity="right"
               android:paddingRight="20dp"
               android:paddingLeft="10dp"

               >
               <EditText

                   android:id="@+id/systolicForDetails"
                   android:layout_width="50dp"
                   android:gravity="right"
                   android:layout_height="wrap_content"
                   android:text="100"
                   android:textColor="@color/black"
                   android:textSize="20dp"
                   android:background="@null"

                   >

               </EditText>
           </LinearLayout>
       </LinearLayout>



    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        app:cardCornerRadius="5dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"

        android:layout_marginVertical="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Diastolic"
                    android:textColor="#50555C"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    >

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="20dp"
                >
                <EditText

                    android:id="@+id/diastolicForDetails"
                    android:layout_width="50dp"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="90"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:background="@null"


                    >

                </EditText>
            </LinearLayout>


        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"


        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"


                android:paddingLeft="8dp"
                android:paddingTop="8dp"

                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comment"
                    android:textSize="20dp"
                    android:textColor="#50555C"

                    >

                </TextView>





            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">   <!--CommentDetails-->




                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/CommentDetails"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:text="It is a long established fact that a reader
will be distracted by the readable content of
a page when looking at its layout. The point of
using Lorem Ipsum is that it has a more-or-less
 normal distribution of letters, as opposed to"
                        android:textColor="#50555C"
                        android:background="@android:color/transparent"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="15dp"


                        >


                    </com.google.android.material.textfield.TextInputEditText>






            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        android:weightSum="2"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteRecordButtonDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:textSize="15dp"
                android:textStyle="bold"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"
                android:backgroundTint="#F44336"
                >

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>



            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveForDetails"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/black"
                    android:backgroundTint="@color/black"
                    >

                </com.google.android.material.button.MaterialButton>
            </LinearLayout>


        
    </LinearLayout>


</LinearLayout>