<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:layout_margin="10dp"
    >

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cardiac Recorder"
        android:textSize="35dp"
        android:textColor="#4F60FA"

        ></TextView>
-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageButton
        android:id="@+id/addNewRecord"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="280dp"

        android:layout_marginTop="567dp"
        android:background="@android:color/transparent"


        android:clickable="true"
        android:src="@drawable/plus_icon">

    </ImageButton>


</RelativeLayout>