<resources>
    <string name="app_name">CardiacRecorder</string>




</resources>